# windfire

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: httpclient.rs  main.rs  utils.rs
