[package]
name = "windfire"
version = "1.3.0"
authors = ["muddlelife <a2753411952@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.17",features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.5.0"
regex = "1.10.6"
reqwest = { version = "0.12.7" ,features = ["socks"]}
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
lto = true # 启用链路时间优化
opt-level = "z"  # 针对规模进行优化
codegen-units = 1 # 减少并行代码生成单元以提高优化
