[package]
name = "windfire"
version = "1.5.0"
authors = ["muddlelife <a2753411952@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.17",features = ["derive"] }
crossbeam = "0.8.4"
csv = "1.3.0"
futures = "0.3.30"
lazy_static = "1.5.0"
regex = "1.10.6"
reqwest = { version = "0.12.7" ,features = ["socks"]}
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
lto = true # 启用链路时间优化
opt-level = "z"  # 针对规模进行优化
codegen-units = 1 # 减少并行代码生成单元以提高优化
debug = false # 禁用调试信息生成，从而减小最终二进制文件的大小
strip = true # 删除编译生成的二进制文件中的调试信息和符号
panic = "abort"
